<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Just Java</string>
    <string name="customer_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="toppings_cream">Whipped Cream</string>
    <string name="toppings_chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="orderBttn">Order</string>
    <string name="thank_you">Thank you!</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Deadpool">%s</xliff:g></string>
    <string name="add_cream">Add cream?</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="total">Total</string>
    <string name="currency">$</string>
</resources>
